fix spacing between years

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ body {
 h2 {
     font-size: 1.2em; 
     font-weight: 600;
-    padding-bottom: 1.5em;
+    padding-bottom: 1.15em;
     text-transform: uppercase;
     letter-spacing: 1.2px;
 }
